# movement-predictor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  docker_push.sh  main.py  pyproject.toml  settings.template.yaml  test.py
.github/workflows/: build-publish-latest.yaml  build-publish-latest.yml  build.yml  create-release.yaml  create-release.yml  pr-build.yml
anomalydetection/: Detector.py  TrajectoryCollector.py  anomalydetection.py  best_model_weights_8dim.pth  config.py  detector.py  modelinfocollector.py  modelinfoparser.py  parameters.json  parameters_test.json  stage.py  trackcollector.py  trajectorycollector.py  videogeneration.py
anomalydetection/mystage/: config.py  mystage.py
anomalydetection/oldCode/: CheckLoop.py  Config.py  MainAnomaly.py  PipelineConnector.py
deployment/compose/: .env  docker-compose.yml
deployment/compose/anomaly-detection/: anomaly-detection.settings.yaml
deployment/helm/: Chart.yaml  customvalues.template.yaml  values.yaml
deployment/helm/templates/: _helpers.tpl  anomaly-detection.configmap.yaml  anomaly-detection.statefulset.yaml  anomaly-post-processing.configmap.yaml  anomaly-post-processing.statefulset.yaml  dockerregistry.secret.yaml  serviceaccount.yaml
docs/: ApproachVisualization.pptx
model/: frame.pth  parameters.json
models/RangelineSMedicalDr/CNN_asymmetric_prob/: parameters.json  parameters_old_loss.json  parameters_trace_multiplyed.json
models/RangelineSMedicalDr/CNN_symmetric_prob/: parameters.json
movementpredictor/: .env.template  __init__.py  config.py  main.py  mixture_density_model.py  validator.py
movementpredictor/anomalydataset/: dataset_creation.py  test_dataset.py  train_dataset.py
movementpredictor/anomalydetection/: anomaly_detector.py  clusterer.py  main_anomaly.py  main_clustering.py  run_inference.py  video_generation.py  visualizer.py
movementpredictor/clustering/: anomaly_detector.py  clusterer.py  main_clustering.py
movementpredictor/cnn/: camera_angle.py  inferencing.py  main_training.py  model_architectures.py  probabilistic_regression.py  run_several_trainings.sh  run_training.sh  start_training.py  training.py
movementpredictor/cnn/hyperparametertuning/: hyperparameter_tuning.py  plot_results.py
movementpredictor/data/: data_prep.py  datafilterer.py  datamanagement.py  dataset.py  main_data.py  main_test_data.py  trackedobjectposition.py
movementpredictor/evaluation/: .env.template  dataset_creation.py  debugging.py  eval_config.py  eval_data.py  eval_prep.py  evaluator.py  label_box.py  main_eval_prep.py  main_label_box.py  situation_descriptions.py  start_script.sh  start_script_eval_prep.sh
movementpredictor/evaluation/metrics_and_results/: dcg_and_ndcg.py  evaluation_helper.py  evaluator.py  histograms.py  ndcg.py  precision_recall_f1.py
tests/: test.py  test_anomaly_detector.py  test_datafilterer.py  test_imports.py
