[tool.poetry]
name = "movementpredictor"
version = "0.2.5"
description = "position forecaster to find unlikely movements for movement clustering"
authors = ["Hanna <hanna.lichtenberg@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.21"
numpy = "^1.26.4"
tqdm = "^4.66.4"
psycopg2-binary = "2.9.9"
python-dotenv = "^1.0.1"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.1"
shapely = "^2.0.5"
hdbscan = "^0.8.40"
opencv-python = "^4.10.0.84"
pybase64 = "^1.3.2"
filterpy = "^1.4.4"

visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"